@@ -15,7 +15,10 @@
 	* tests/mpz/t-get_d_2exp.c (check_zero): New check.
 	* tests/mpz/t-inp_str.c: A few more cases.
 	* tests/mpz/t-cmp_d.c: More bases and symbols, a few cases.
-	
+
+	* mpz/rootrem.c: Correctly handle odd roots of negatives.
+	* tests/mpz/t-root.c: Test it.
+
 2012-05-16  Torbjorn Granlund  <tege@gmplib.org>
 
 	* tests/mpf/t-eq.c (check_random): New function, meat from old main().
